# PCR-Pro

./: CMakeLists.txt  README.md  data.xlsx  main.cpp  sicp.yaml
3dcov/: cbshot.cpp  cbshot.h
Results/: cloud_s_transformed.pcd  cloud_s_transformed.vtk  cloud_source_aftertf.pcd  cloud_source_aftertf.vtk  cloud_source_scale.pcd  cloud_source_scale.vtk  cloud_target.vtk  transformation.txt
data/Result_1/: OpenGV transformation.txt~  cloud_filtered_source.pcd  cloud_filtered_source.vtk  cloud_filtered_target.pcd  cloud_filtered_target.vtk  cloud_s_trans.pcd  cloud_scale.pcd  cloud_scale.vtk  cloud_source.vtk  paraview.pvsm  robot1pcd36.pcd  robot2pcd16.pcd  source_original.vtk  transformation.txt  transformation.txt~
data/Results_2/: OpenGV transformation.txt~  cloud_filtered_source.pcd  cloud_filtered_source.vtk  cloud_filtered_target.pcd  cloud_filtered_target.vtk  cloud_scale.pcd  cloud_scale.vtk  cloud_source.pcd  cloud_ss.vtk  cloud_targets.pcd  paraview.pvsm  robot1pcd39.pcd  source_original.vtk  target_original.vtk  transformation.txt
data/Results_3/: OpenGV transformation.txt~  cloud_scale.pcd  cloud_scale.vtk  cloud_source.pcd  cloud_source.vtk  paraview.pvsm  robot1pcd5.pcd  robot2pcd11.pcd  source_original.vtk  target_original.vtk  transformation.txt
data/Results_6/: OpenGV transformation.txt~  cloud_scale.pcd  cloud_scale.vtk  cloud_source.pcd  cloud_ss.vtk  cloud_targets.pcd  robot1pcd9.pcd  robot2pcd8.vtk  source_original.vtk  transformation.txt
data/Results_7/: cloud_s_trans.pcd  cloud_scale.pcd  cloud_source.vtk  robot1pcd39.pcd  robot2pcd42.pcd  source_original.vtk  target_original.vtk  (+1 more)
kalman/: KalmanFilterScale.cpp  KalmanFilterScale.h
(+12 files in other folders)
